# TerraLite

./: .gitignore  CMakeLists.txt  Dependencies.cmake  OpenGLFun.cpp  README.md
Core/: Application.cpp  Application.h  CMakeLists.txt  Event.h  InputEvents.h  Main.cpp  WindowEvents.h
Core/Events/: Event.h
Core/Renderer/: GLUtils.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TerrainGeometry.cpp  TerrainGeometry.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Core/Renderer/Shaders/: basic.shader  texture.frag.glsl  transform.vert.glsl
Core/UI/: UIManager.cpp  UIManager.h  UIMenuBar.cpp  UIMenuBar.h  UISidebar.cpp  UISidebar.h
Core/Utils/: Constants.h  FileIO.h  Globals.h  Maths.h  Noise.h
Core/shaders/: basic.shader
shaders/: basic.shader
